--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-joblib == 0.13.2
-matplotlib == 3.1.1
-numpy == 1.17.2
-pandas == 0.25.1
-torch == 1.3.1
-env == 0.1.0
-gym == 0.20.0
-torch_geometric == 2.0.1
+joblib
+matplotlib
+numpy
+pandas
+env
+gym
