new feature: distance to end

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 ### Linux ###
 *~
+GCNConv.patch
+current_txt
+ModelHeterogene.patch
+ModuleList.patch
+Linear.patch
+runs/*
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
